--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -26,15 +26,7 @@
     </tbody>
     </table>
     <div class="row">
-      <% if user.id == current_user.id %>
-       <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block text-brack" do %>
-       <i class="fas fa-user-cog"></i>
-       <% end %>
-       <% else %>
-       <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block text-brack" do %>
-       <i class="fas fa-user-cog"></i>
-       <% end %>
-      <% end %>
+      <%= link_to '', edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
     </div>
 
 
