--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,6 +19,22 @@
     <td><%= link_to (attachment_image_tag book.user, :profile_image, :fill, 40, 40, fallback: "no_image.jpg", size: "40x40"), user_path(book.user_id) %></td>
     <td><%= link_to (book.title), book_path(book.id) %></td>
     <td><%= book.body %></td>
+    <td>
+      <% if book.favorited_by?(current_user) %>
+    <p>
+      <%= link_to book_favorites_path(book), method: :delete, class: "like" do %>
+        ♥<%= book.favorites.count %>
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to book_favorites_path(book), method: :post do %>
+        ♥<%= book.favorites.count %>
+      <% end %>
+    </p>
+  <% end %>
+    </td>
+    <td>コメント数：<%= book.book_comments.count %></td>
   </tr>
  <% end %>
 
