--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,6 +16,23 @@
     </td>
     <td><%= link_to @book.title, book_path(@book.id) %></td>
     <td><%= @book.body %></td>
+    <td>
+      <% if @book.favorited_by?(current_user) %>
+    <p>
+      <%= link_to book_favorites_path(@book), method: :delete, class: "like" do %>
+        ♥<%= @book.favorites.count %> 
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to book_favorites_path(@book), method: :post do %>
+        ♥<%= @book.favorites.count %> 
+      <% end %>
+    </p>
+  <% end %>
+    </td>
+    <td>コメント数：<%= @book.book_comments.count %></td>
+
     <% if @book.user == current_user %>
     <td><%= link_to edit_book_path(@book), class: "btn btn-sm btn-success" do %>
        Edit
@@ -25,8 +42,37 @@
        <% end %></td>
     <% end %>
   </tr>
-
   </tbody>
   </table>
+
+
+  <div class="comments">
+  <% @book.book_comments.each do |book_comment| %>
+  <table>
+    <tr>
+      <td>
+    <%= image_tag('no_image.jpg') %>
+    </td>
+        <td>
+        <%= book_comment.comment %>
+        </td>
+    <% if book_comment.user == current_user %>
+    <td>
+  <div class="comment-delete">
+        <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-sm btn-danger" %>
+  </div>
+  </td>
+  </tr>
+  </table>
+  <%= link_to (book_comment.user.name), user_path(@book.user_id) %>
+  <% end %>
+  <% end %>
+  </div>
+  <div class="new-comment">
+  <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
+    <%= f.text_area :comment, rows:'5',placeholder: "", class: "bookcomment" %>
+    <%= f.submit "送信" %>
+  <% end %>
+  </div>
 </div>
 </div>
