--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -23,6 +23,21 @@
       <th>introduction</th>
       <th><%= user.introduction %></th>
     </tr>
+    <tr>
+      <th>follows</th>
+      <th><%= link_to (user.followings.count), user_followings_path(user) %></th>
+    </tr>
+    <tr>
+      <th>followers</th>
+      <th><%= link_to (user.followers.count), user_followers_path(user) %></th>
+    </tr>
+    <th><% if user.id != current_user.id %>
+    <% if current_user.following?(user) %>
+    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete, class: "btn btn-sm btn-info" %>
+    <% else %>
+    <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-sm btn-success" %>
+    <% end %>
+    <% end %></th>
     </tbody>
     </table>
     <div class="row">
