--- a/app/views/relationships/followings.html.erb
+++ b/app/views/relationships/followings.html.erb
@@ -1,7 +1,5 @@
-<%= render 'books/list', user: current_user,book: @book  %>
-
-<div class="col-md-8 offset-md-1">
-  <h2>Users</h2>
+<% if @users.exists? %>
+  <h2>Follow Users</h2>
   <table class="table">
   <thead>
   <tr>
@@ -18,21 +16,13 @@
     <td><%= user.name %></td>
     <td>フォロー数: <%= user.followings.count %></td>
     <td>フォロワー数: <%= user.followers.count %></td>
-
-    <td>
-    <% if user.id != current_user.id %>
-    <% if current_user.following?(user) %>
-    <%= link_to "フォローを外す", user_relationships_path(user.id), method: :delete %>
-    <% else %>
-    <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
-    <% end %>
-    <% end %>
-    </td>
     <td><%= link_to "Show", user_path(user.id) %></td>
   </tr>
  <% end %>
-
   </tbody>
   </table>
 </div>
-</div>
+<% else %>
+  <h2>Follow Users</h2>
+  <p>ユーザーはいません</p>
+<% end %>
