--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,14 @@
       </nav>
     </header>
     <%= notice %>
+    <% if user_signed_in? %>
+    <%= form_with url: search_path, method: :get, local: :true do |f| %>
+      <%= f.text_field :word %>
+      <%= f.select :range, options_for_select([['User'], ['Book']]) %>
+      <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"], ["前方一致","forward_match"], ["後方一致","backward_match"]]) %>
+      <%= f.submit "検索" %>
+    <% end %>
+    <% end %>
     <main>
     <%= yield %>
     </main>
